Version 0.52.0 (In Progress)

  * add option to 'losf add [host]' command to allow specification of desired node type

Version 0.51.2 (14 April 2015)

  * fix for koomie_cf options parsing

Version 0.51.1 (08 April 2015)

  * fix for use of "losf addpkg" with a chroot environment
  * added support for "--yes" option to losf addpkg

Version 0.51.0 (30 March 2015)

  * disallow addition of custom rpm if the same version/release was cached previously in rpm_topdir
  * minor updates to INSTALL file
  * allow support for node-type specific [Permissions] control
  * update initconfig utility to allow use of previously existing config dirs for initialization
  * include chroot syncing capability for standalone "sync_config_files" utility
  * improve FQDN query for initconfig utility
  * expand regression test suite
  * allow losf -v/--version queries when LOSF_CONFIG_DIR is not valid

Version 0.50.0 (24 November 2014)

  * include support for RHEL7 without need for additional yum downloadonly plugin
  * remove use of Switch.pm from losf util to support newer perl versions
  * update parallel ssh tool (koomie_cf) to support SLES12

Version 0.49.0 (28 September 2014)

  * update to RPM .spec file template - removes shell startup scripts
    in favor of links to binaries
  * new option added to koomie_cf: use -q to launch underlying ssh commands
    with quiet option -primarily useful to silence .ssh key warnings
  * disable output coloring if no tty is connected
  * update CLI wrappers to account for execution via soft link
  * improve command-line parsing within losf utility to warn against unsupported options

Version 0.48.0 (10 August 2014)

  * extend update for chroot environments to allow for native execution on a non-master type host
  * added input option to allow specification of desired Warewulf bootstrap
  * addition of chroot support for "losf updatepkgs" option
  * added support for zypper OS patterns with "losf addgroup" under SLES